# ne-mcp-eeg

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: installation.md  tools.md
reference_scripts/: README.md  band_power.py  compute_psd.py  load_easy_file.py  quality_check.py
reference_scripts/sample_data/: demo_recording.easy  demo_recording.info  generate_demo.py
src/ne_eeg_server/: __init__.py  constants.py  models.py  server.py  tools.py
src/ne_eeg_server/analysis/: analyzer.py  metrics_defaults.py  plotting.py  psd_peak_qc.py  qc.py
src/ne_eeg_server/readers/: easy.py  edf.py  loader.py  nedf.py
src/ne_eeg_server/reports/: pdf.py
tests/: test_readers.py  test_server.py  test_tools.py
