[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ne-mcp-eeg"
version = "0.1.0"
description = "MCP server for EEG analysis with Neuroelectrics data formats"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Neuroelectrics" },
]
keywords = ["eeg", "mcp", "neuroelectrics", "signal-processing", "neuroscience"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mcp>=1.0.0",
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "reportlab",
    "pyedflib",
    "Pillow",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
ne-eeg-server = "ne_eeg_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ne_eeg_server"]
